--- a/app/templates/theme5/public.html
+++ b/app/templates/theme5/public.html
@@ -9,8 +9,10 @@
     <link rel="apple-touch-icon" sizes="180x180" href="app/images/icon.png">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="default">
-    
-    {LIBRARIES}
+      <script src="https://kit.fontawesome.com/313adf4cdc.js" crossorigin="anonymous"></script>
+
+
+      {LIBRARIES}
     {HEAD}
 
     <script src="app/lib/include/admin-all.min.js?appver=700" type="text/javascript"></script>
