--- a/app/templates/theme5/layout.html
+++ b/app/templates/theme5/layout.html
@@ -9,6 +9,8 @@
     <link rel="icon" href="bionebranca.ico" type="image/x-icon" />
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="default">
+      <script src="https://kit.fontawesome.com/313adf4cdc.js" crossorigin="anonymous"></script>
+
 
       <link href='https://fonts.cdnfonts.com/css/lato' rel='stylesheet'>
       <style>@import url('https://fonts.cdnfonts.com/css/lato');</style>
