--- a/app/templates/theme5/login.html
+++ b/app/templates/theme5/login.html
@@ -14,6 +14,8 @@
     <link href="app/templates/{template}/css/style.css" rel="stylesheet">
     <link href="app/templates/{template}/css/themes/all-themes.css" rel="stylesheet" />
     <link href="app/lib/include/admin.min.css?appver=700" rel="stylesheet" type="text/css" media="screen">
+    <script src="https://kit.fontawesome.com/313adf4cdc.js" crossorigin="anonymous"></script>
+
     <style>
         #tbutton_btn_entrar{
 	background-image:none;
